--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["Umesh Kumar Sarkar <umeshsarkar19@outlook.com>"]
 description = "Generates a folder for Python with .venv virtual environment and git"
 
 [dependencies]
-clap = { version = "4.5.*", features = ["cargo"] }
+clap = { version = "4.5.*", features = ["cargo", "derive"] }
