--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ description = "Generates a folder for Python with .venv virtual environment and 
 
 [dependencies]
 clap = { version = "4.5.*", features = ["cargo", "derive"] }
+indoc ="2"
